src/test/deca/context/invalid/resultats/test4_op_modulo2-ima.res
  IMA -- Fichier ./src/test/deca/context/invalid/test4_op_modulo2.ass introuvable
